// Copyright 2026 Peter Edge
//
// All rights reserved.

syntax = "proto3";

package standard.money.v1;

import "buf/validate/validate.proto";
import "standard/math/v1/decimal.proto";

// Money represents a monetary amount in a specific currency.
message Money {
  // The three-letter ISO 4217 currency code (e.g., "USD").
  string currency_code = 1 [(buf.validate.field).string.pattern = "^[A-Z]{3}$"];
  // The monetary amount as a decimal value.
  standard.math.v1.Decimal amount = 2 [(buf.validate.field).required = true];
}
